--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -36,11 +36,16 @@
       </button>
     </div>
     <div class="hidden sections">
-      <div class="aboutSection">
-        <a id="aboutAnchor">
-        </a>
+      <div id="aboutSection" class="section">
+        <a id="aboutAnchor"></a>
         <h2 class="sectionHeader">About Me</h2>
-        <img src="./images/pictureofme.jpg" class="myImage">
+        <div id="aboutContent">
+        <img
+          src="./images/pictureofme.jpg"
+          alt="A picture of me and my girlfriend on a hike"
+          id="myImage"
+          class="image"
+        />
         <p class="aboutText">
           Hello! My name is Matthew Mahnke, I'm a current student at Portland
           State University pursuing a Bachelor's degree in computer science with
@@ -59,6 +64,21 @@
           future career may be like, but I'm very interested in machine learning
           and full-stack development!
         </p>
+        </div>
+      </div>
+      <a id="previousAnchor"></a>
+      <div id="previousSection" class="section">
+        <h2 class="sectionHeader">Previous Work</h2>
+        <img
+          src="./images/Matthew Mahnke Outdated Resume.png"
+          alt="An image of my resume including previous work I've accomplished"
+          id="resume"
+          class="image"
+        />
+      </div>
+      <a id="projectsAnchor"></a>
+      <div id="projectsSection" class="section">
+
       </div>
     </div>
   </body>
