Responsibility featured adjusted and added so it is more responsible!

--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -36,50 +36,51 @@
       </button>
     </div>
     <div class="hidden sections">
+    <a id="aboutAnchor" class="anchor"></a>
       <div id="aboutSection" class="section">
-        <a id="aboutAnchor"></a>
         <h2 class="sectionHeader">About Me</h2>
         <div id="aboutContent">
-        <img
-          src="./images/pictureofme.jpg"
-          alt="A picture of me and my girlfriend on a hike"
-          id="myImage"
-          class="image"
-        />
-        <p class="aboutText">
-          Hello! My name is Matthew Mahnke, I'm a current student at Portland
-          State University pursuing a Bachelor's degree in computer science with
-          a projected graduation date of March 2024. While I don't yet have any
-          professional experience, I'll be completing an internship in software
-          engineering this summer with a focus in working with Python. I am
-          proficient in C++, Python and Java, with brief experience in HTML,
-          CSS, and JavaScript, which I'm hoping to work with a lot more in the
-          near future. A majority of my classwork so far has focused on data
-          structures and learning core fundamentals of computer science, for
-          example object oriented programming and dynamic programming, but I'm
-          excited to broaden my experience in the next few terms with classes on
-          more specialized topics such as virtual reality and machine learning.
-          I have a lot of areas of computer science I'm interested in that I've
-          yet to experience fully, which makes it difficult to visualize what my
-          future career may be like, but I'm very interested in machine learning
-          and full-stack development!
-        </p>
+          <img
+            src="./images/pictureofme.jpg"
+            alt="A picture of me and my girlfriend on a hike"
+            id="myImage"
+            class="image"
+          />
+          <p class="aboutText">
+            Hello! My name is Matthew Mahnke, I'm a current student at Portland
+            State University pursuing a Bachelor's degree in computer science
+            with a projected graduation date of March 2024. While I don't yet
+            have any professional experience, I'll be completing an internship
+            in software engineering this summer with a focus in working with
+            Python. I am proficient in C++, Python and Java, with brief
+            experience in HTML, CSS, and JavaScript, which I'm hoping to work
+            with a lot more in the near future. A majority of my classwork so
+            far has focused on data structures and learning core fundamentals of
+            computer science, for example object oriented programming and
+            dynamic programming, but I'm excited to broaden my experience in the
+            next few terms with classes on more specialized topics such as
+            virtual reality and machine learning. I have a lot of areas of
+            computer science I'm interested in that I've yet to experience
+            fully, which makes it difficult to visualize what my future career
+            may be like, but I'm very interested in machine learning and
+            full-stack development!
+          </p>
         </div>
       </div>
-      <a id="previousAnchor"></a>
+      <a id="previousAnchor" class="anchor"></a>
       <div id="previousSection" class="section">
-        <h2 class="sectionHeader">Previous Work</h2>
-        <img
-          src="./images/Matthew Mahnke Outdated Resume.png"
-          alt="An image of my resume including previous work I've accomplished"
-          id="resume"
-          class="image"
-        />
+        <h2 id="previousHeader" class="sectionHeader">Previous Work</h2>
+        <div id="previousContent">
+          <img
+            src="./images/Matthew Mahnke Outdated Resume.png"
+            alt="An image of my resume including previous work I've accomplished"
+            id="resume"
+            class="image"
+          />
+        </div>
       </div>
       <a id="projectsAnchor"></a>
-      <div id="projectsSection" class="section">
-
-      </div>
+      <div id="projectsSection" class="section"></div>
     </div>
   </body>
 </html>
