Sections for projects added and formatted, contact form added

--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -36,7 +36,7 @@
       </button>
     </div>
     <div class="hidden sections">
-    <a id="aboutAnchor" class="anchor"></a>
+      <a id="aboutAnchor" class="anchor"></a>
       <div id="aboutSection" class="section">
         <h2 class="sectionHeader">About Me</h2>
         <div id="aboutContent">
@@ -47,16 +47,16 @@
             class="image"
           />
           <p class="aboutText">
-            Hello! My name is Matthew Mahnke, I'm a current student at Portland
-            State University pursuing a Bachelor's degree in computer science
-            with a projected graduation date of March 2024. While I don't yet
-            have any professional experience, I'll be completing an internship
-            in software engineering this summer with a focus in working with
-            Python. I am proficient in C++, Python and Java, with brief
-            experience in HTML, CSS, and JavaScript, which I'm hoping to work
-            with a lot more in the near future. A majority of my classwork so
-            far has focused on data structures and learning core fundamentals of
-            computer science, for example object oriented programming and
+            <b>Hello! My name is Matthew Mahnke.</b> I'm a current student at
+            Portland State University pursuing a Bachelor's degree in computer
+            science with a projected graduation date of March 2024. While I
+            don't yet have any professional experience, I'll be completing an
+            internship in software engineering this summer with a focus in
+            working with Python. I am proficient in C++, Python and Java, with
+            brief experience in HTML, CSS, and JavaScript, which I'm hoping to
+            work with a lot more in the near future. A majority of my classwork
+            so far has focused on data structures and learning core fundamentals
+            of computer science, for example object oriented programming and
             dynamic programming, but I'm excited to broaden my experience in the
             next few terms with classes on more specialized topics such as
             virtual reality and machine learning. I have a lot of areas of
@@ -79,8 +79,32 @@
           />
         </div>
       </div>
-      <a id="projectsAnchor"></a>
-      <div id="projectsSection" class="section"></div>
+      <a id="projectsAnchor" class="anchor"></a>
+      <div id="projectsSection" class="section">
+        <h2 id="projectsHeader" class="sectionHeader">Projects</h2>
+        <div id="projectsContent">
+          <div id="project1" class="project"></div>
+          <div id="project2" class="project"></div>
+        </div>
+      </div>
+      <a id="contactAnchor" class="anchor"></a>
+      <div id="contactSection" class="section">
+          <h2 id="contactHeader" class="sectionHeader">Contact Me</h2>
+        <form action="" id="contactForm" class="form">
+          <div class="form-element">
+            <label for="username">Name: </label>
+            <input class="form-box" type="text" name="username" id="username" />
+          </div>
+          <div class="form-element">
+            <label for="email">Email: </label>
+            <input class="form-box" type="email" name="email" id="email" />
+          </div>
+          <div class="form-element">
+            <label for="message">Message: </label>
+            <input class="form-box" type="input" name="message" id="message" />
+          </div>
+        </form>
+      </div>
     </div>
   </body>
 </html>
