--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -83,13 +83,40 @@
       <div id="projectsSection" class="section">
         <h2 id="projectsHeader" class="sectionHeader">Projects</h2>
         <div id="projectsContent">
-          <div id="project1" class="project"></div>
-          <div id="project2" class="project"></div>
+          <div id="project1" class="project">
+            <h2 id="project1Header" class="sectionHeader">Racing Simulator</h2>
+            <img
+              id="project1Img"
+              class="image"
+              src="./images/racing sim screenshot.png"
+              alt="An image of the terminal menu for my racing simulator."
+            />
+            <p id="project1Text">
+              This program is a terminal based racing simulator/game that allows
+              you to create a few different vehicles, modify their stats, and
+              race them on two different kinds of tracks. If you'd like to see
+              the code behind it, click below!
+            </p>
+          </div>
+          <div id="project2" class="project">
+            <h2 id="project2Header" class="sectionHeader">This Website</h2>
+            <img
+              id="project2Img"
+              class="image"
+              src="./images/website html screenshot.png"
+              alt="An image of some HTML code behind this website."
+            />
+            <p id="project2Text">
+              Creating this personal website was a great learning opportunity
+              and reinforced a lot of basics for HTML, CSS and JavaScript. If
+              you'd like to see the code behind it, click below!
+            </p>
+          </div>
         </div>
       </div>
       <a id="contactAnchor" class="anchor"></a>
       <div id="contactSection" class="section">
-          <h2 id="contactHeader" class="sectionHeader">Contact Me</h2>
+        <h2 id="contactHeader" class="sectionHeader">Contact Me</h2>
         <form action="" id="contactForm" class="form">
           <div class="form-element">
             <label for="username">Name: </label>
@@ -103,6 +130,8 @@
             <label for="message">Message: </label>
             <input class="form-box" type="input" name="message" id="message" />
           </div>
+          <input id="btn-primary" class="form-element" type="submit" value="Submit" />
+          <input id="btn-secondary" class="form-element"  type="reset" value="Reset" />
         </form>
       </div>
     </div>
