Most updated version with all functionalities implemented!

--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -52,7 +52,7 @@
             science with a projected graduation date of March 2024. While I
             don't yet have any professional experience, I'll be completing an
             internship in software engineering this summer with a focus in
-            working with Python. I am proficient in C++, Python and Java, with
+            working with Python. I am proficient in C++, Python and C, with
             brief experience in HTML, CSS, and JavaScript, which I'm hoping to
             work with a lot more in the near future. A majority of my classwork
             so far has focused on data structures and learning core fundamentals
@@ -72,7 +72,7 @@
         <h2 id="previousHeader" class="sectionHeader">Previous Work</h2>
         <div id="previousContent">
           <img
-            src="./images/Matthew Mahnke Outdated Resume.png"
+            src="./images/Updated Resume.png"
             alt="An image of my resume including previous work I've accomplished"
             id="resume"
             class="image"
@@ -97,6 +97,7 @@
               race them on two different kinds of tracks. If you'd like to see
               the code behind it, click below!
             </p>
+            <a class="link-text githubLink" id="project1Github" href="https://github.com/mcmahnke/Racing-Simulator">Github</a>
           </div>
           <div id="project2" class="project">
             <h2 id="project2Header" class="sectionHeader">This Website</h2>
@@ -111,6 +112,7 @@
               and reinforced a lot of basics for HTML, CSS and JavaScript. If
               you'd like to see the code behind it, click below!
             </p>
+            <a class="link-text githubLink" id="project2Github" href="https://github.com/mcmahnke/personal-website">Github</a>
           </div>
         </div>
       </div>
@@ -130,8 +132,20 @@
             <label for="message">Message: </label>
             <input class="form-box" type="input" name="message" id="message" />
           </div>
-          <input id="btn-primary" class="form-element" type="submit" value="Submit" />
-          <input id="btn-secondary" class="form-element"  type="reset" value="Reset" />
+          <div id="btnContainer">
+            <input
+              id="btn-primary"
+              class="form-element"
+              type="submit"
+              value="Submit"
+            />
+            <input
+              id="btn-secondary"
+              class="form-element"
+              type="reset"
+              value="Reset"
+            />
+          </div>
         </form>
       </div>
     </div>
