Actual most updated version, formatting fixes in source files

--- a/personalWebsite.html
+++ b/personalWebsite.html
@@ -97,7 +97,12 @@
               race them on two different kinds of tracks. If you'd like to see
               the code behind it, click below!
             </p>
-            <a class="link-text githubLink" id="project1Github" href="https://github.com/mcmahnke/Racing-Simulator">Github</a>
+            <a
+              class="link-text githubLink"
+              id="project1Github"
+              href="https://github.com/mcmahnke/Racing-Simulator"
+              >Github</a
+            >
           </div>
           <div id="project2" class="project">
             <h2 id="project2Header" class="sectionHeader">This Website</h2>
@@ -112,7 +117,12 @@
               and reinforced a lot of basics for HTML, CSS and JavaScript. If
               you'd like to see the code behind it, click below!
             </p>
-            <a class="link-text githubLink" id="project2Github" href="https://github.com/mcmahnke/personal-website">Github</a>
+            <a
+              class="link-text githubLink"
+              id="project2Github"
+              href="https://github.com/mcmahnke/personal-website"
+              >Github</a
+            >
           </div>
         </div>
       </div>
